--- a/hailgun.cabal
+++ b/hailgun.cabal
@@ -59,7 +59,10 @@ library
   -- Other library packages from which modules are imported.
   build-depends:       base >=4.6 && <4.7
                        , bytestring >= 0.9
+                       , aeson == 0.7.*
+                       , text == 0.11.*
                        , email-validate ==2.0.*
+                       , HTTP == 4000.2.*
   
   -- Directories containing source files.
   -- hs-source-dirs:      
