--- a/hailgun.cabal
+++ b/hailgun.cabal
@@ -61,8 +61,8 @@ library
                        , bytestring >= 0.9
                        , aeson == 0.7.*
                        , text == 0.11.*
-                       , email-validate ==2.0.*
                        , HTTP == 4000.2.*
+                       , email-validate ==2.0.*
   
   -- Directories containing source files.
   -- hs-source-dirs:      
@@ -70,3 +70,11 @@ library
   -- Base language which the package is written in.
   default-language:    Haskell2010
   
+executable hailgun-send
+   hs-source-dirs:   src
+   main-is:          Send.hs
+
+   build-depends:    base == 4.6.*
+                     , hailgun
+                     , configurator == 0.3.*
+                     , text == 0.11.*
