--- a/hailgun.cabal
+++ b/hailgun.cabal
@@ -78,3 +78,4 @@ executable hailgun-send
                      , hailgun
                      , configurator == 0.3.*
                      , text == 0.11.*
+                     , bytestring >= 0.9
