--- a/hailgun.cabal
+++ b/hailgun.cabal
@@ -63,6 +63,7 @@ library
                        , text == 0.11.*
                        , transformers == 0.3.*
                        , http-client == 0.3.*
+                       , http-client-tls == 0.2.*
                        , email-validate ==2.0.*
                        , http-types == 0.8.*
   
