--- a/hailgun.cabal
+++ b/hailgun.cabal
@@ -82,3 +82,6 @@ executable hailgun-send
                      , configurator == 0.3.*
                      , text == 0.11.*
                      , bytestring >= 0.9
+
+  -- Base language which the package is written in.
+  default-language:    Haskell2010
