--- a/hailgun.cabal
+++ b/hailgun.cabal
@@ -50,15 +50,16 @@ cabal-version:       >=1.10
 
 library
    exposed-modules:     Mail.Hailgun
-   build-depends:         base >= 4.6 && < 5
-                        , bytestring >= 0.10.4 && <= 0.11
-                        , aeson == 0.7.*
-                        , text == 1.1.*
-                        , transformers == 0.3.*
-                        , http-client == 0.3.*
-                        , http-client-tls == 0.2.*
-                        , email-validate ==2.0.*
-                        , http-types == 0.8.*
+   build-depends:         base               >= 4.6 && < 5
+                        , time               >= 1.2 && < 1.6
+                        , bytestring         >= 0.10.4 && <= 0.11
+                        , aeson              == 0.7.*
+                        , text               == 1.1.*
+                        , transformers       == 0.3.*
+                        , http-client        == 0.3.*
+                        , http-client-tls    == 0.2.*
+                        , email-validate     ==2.0.*
+                        , http-types         == 0.8.*
 
    ghc-options:         -W
    default-language:    Haskell2010
