--- a/hailgun.cabal
+++ b/hailgun.cabal
@@ -62,8 +62,9 @@ library
                         , transformers       == 0.3.*
                         , http-client        == 0.3.*
                         , http-client-tls    == 0.2.*
-                        , email-validate     ==2.0.*
+                        , email-validate     == 2.0.*
                         , http-types         == 0.8.*
+                        , exceptions         >= 0.4
    if flag(newtime)
       Build-Depends:    time == 1.5.*
    else
