--- a/hailgun.cabal
+++ b/hailgun.cabal
@@ -55,6 +55,7 @@ Flag NewTime
 
 library
    exposed-modules:     Mail.Hailgun
+   other-modules:       Mail.Hailgun.Internal.Data
    build-depends:         base               >= 4.6 && < 5
                         , bytestring         >= 0.10.4 && <= 0.11
                         , aeson              == 0.7.*
