--- a/hailgun.cabal
+++ b/hailgun.cabal
@@ -56,6 +56,8 @@ Flag NewTime
 library
    exposed-modules:     Mail.Hailgun
    other-modules:       Mail.Hailgun.Internal.Data
+                        , Mail.Hailgun.AttachmentsSearch
+
    build-depends:         base               >= 4.6 && < 5
                         , bytestring         >= 0.10.4 && <= 0.11
                         , aeson              == 0.7.*
@@ -66,6 +68,7 @@ library
                         , email-validate     == 2.0.*
                         , http-types         == 0.8.*
                         , exceptions         >= 0.4
+                        , tagsoup            == 0.13.*
    if flag(newtime)
       Build-Depends:    time == 1.5.*
    else
