Fully refactored the code into separate modules. (#1)
Now we can start refactoring and testing this code sensibly.

--- a/hailgun.cabal
+++ b/hailgun.cabal
@@ -57,6 +57,11 @@ library
    exposed-modules:     Mail.Hailgun
    other-modules:       Mail.Hailgun.Internal.Data
                         , Mail.Hailgun.AttachmentsSearch
+                        , Mail.Hailgun.Domains
+                        , Mail.Hailgun.SendEmail
+                        , Mail.Hailgun.Pagination
+                        , Mail.Hailgun.MailgunApi
+                        , Mail.Hailgun.Errors
 
    build-depends:         base               >= 4.6 && < 5
                         , bytestring         >= 0.10.4 && <= 0.11
