--- a/hailgun.cabal
+++ b/hailgun.cabal
@@ -55,6 +55,8 @@ Flag NewTime
 
 library
    exposed-modules:     Mail.Hailgun
+                        , Mail.Hailgun.Attachment
+
    other-modules:       Mail.Hailgun.Internal.Data
                         , Mail.Hailgun.AttachmentsSearch
                         , Mail.Hailgun.Domains
@@ -62,6 +64,7 @@ library
                         , Mail.Hailgun.Pagination
                         , Mail.Hailgun.MailgunApi
                         , Mail.Hailgun.Errors
+                        , Mail.Hailgun.Message
 
    build-depends:         base               >= 4.6 && < 5
                         , bytestring         >= 0.10.4 && <= 0.11
@@ -74,6 +77,7 @@ library
                         , http-types         == 0.8.*
                         , exceptions         >= 0.4
                         , tagsoup            == 0.13.*
+
    if flag(newtime)
       Build-Depends:    time == 1.5.*
    else
