--- a/hailgun.cabal
+++ b/hailgun.cabal
@@ -10,7 +10,7 @@ name:                hailgun
 -- PVP summary:      +-+------- breaking API changes
 --                   | | +----- non-breaking API additions
 --                   | | | +--- code changes with no API change
-version:             0.2.1.0
+version:             0.3.0.0
 
 -- A short (one-line) description of the package.
 synopsis:            Mailgun REST api interface for Haskell.
@@ -59,12 +59,14 @@ library
 
    other-modules:       Mail.Hailgun.Internal.Data
                         , Mail.Hailgun.AttachmentsSearch
+                        , Mail.Hailgun.Communication
                         , Mail.Hailgun.Domains
-                        , Mail.Hailgun.SendEmail
-                        , Mail.Hailgun.Pagination
-                        , Mail.Hailgun.MailgunApi
                         , Mail.Hailgun.Errors
+                        , Mail.Hailgun.MailgunApi
                         , Mail.Hailgun.Message
+                        , Mail.Hailgun.Pagination
+                        , Mail.Hailgun.PartUtil
+                        , Mail.Hailgun.SendEmail
 
    build-depends:         base               >= 4.6 && < 5
                         , bytestring         >= 0.10.4 && <= 0.11
