--- a/hailgun.cabal
+++ b/hailgun.cabal
@@ -73,7 +73,7 @@ library
                         , bytestring         >= 0.10.4 && <= 0.11
                         , aeson              == 0.8.*
                         , text               == 1.2.*
-                        , transformers       == 0.4.*
+                        , transformers       >= 0.3 && <0.5
                         , http-client        == 0.4.*
                         , http-client-tls    == 0.2.*
                         , email-validate     == 2.1.*
