--- a/hailgun.cabal
+++ b/hailgun.cabal
@@ -71,13 +71,13 @@ library
 
    build-depends:         base               >= 4.6 && < 5
                         , bytestring         >= 0.10.4 && <= 0.11
-                        , aeson              == 0.8.*
+                        , aeson              >= 0.8 && < 0.10
                         , text               == 1.2.*
                         , transformers       >= 0.3 && <0.5
                         , http-client        == 0.4.*
                         , http-client-tls    == 0.2.*
-                        , email-validate     >= 2.0 && <2.2
-                        , http-types         == 0.8.*
+                        , email-validate     >= 2.0 && <2.3
+                        , http-types         >= 0.8 && < 0.10
                         , exceptions         == 0.8.*
                         , tagsoup            == 0.13.*
                         , filepath           >= 1 && < 2
