--- a/hailgun.cabal
+++ b/hailgun.cabal
@@ -73,17 +73,17 @@ library
                         , bytestring         >= 0.10.4 && <= 0.11
                         , aeson              >= 0.8 && < 0.12
                         , text               == 1.2.*
-                        , transformers       >= 0.3 && <0.5
+                        , transformers       >= 0.3 && < 0.6
                         , http-client        == 0.4.*
                         , http-client-tls    == 0.2.*
                         , email-validate     >= 2.0 && <2.3
                         , http-types         >= 0.8 && < 0.10
                         , exceptions         == 0.8.*
-                        , tagsoup            == 0.13.*
+                        , tagsoup            >= 0.13 && < 0.15
                         , filepath           >= 1 && < 2
 
    if flag(newtime)
-      Build-Depends:    time == 1.5.*
+      Build-Depends:    time >= 1.5 && < 1.7
    else
       Build-Depends:    time >= 1.2 && < 1.5, old-locale == 1.*
 
