--- a/hailgun.cabal
+++ b/hailgun.cabal
@@ -71,11 +71,11 @@ library
 
    build-depends:         base               >= 4.6 && < 5
                         , bytestring         >= 0.10.4 && <= 0.11
-                        , aeson              >= 0.8 && < 0.12
+                        , aeson              >= 0.8 && < 1.1
                         , text               == 1.2.*
                         , transformers       >= 0.3 && < 0.6
-                        , http-client        == 0.4.*
-                        , http-client-tls    == 0.2.*
+                        , http-client        >= 0.4 && < 0.6
+                        , http-client-tls    >= 0.2 && < 0.4
                         , email-validate     >= 2.0 && <2.3
                         , http-types         >= 0.8 && < 0.10
                         , exceptions         == 0.8.*
