--- a/hailgun.cabal
+++ b/hailgun.cabal
@@ -36,6 +36,8 @@ maintainer:          robertmassaioli@gmail.com
 -- A copyright notice.
 copyright:           (c) 2014 Robert Massaioli
 
+homepage:            https://bitbucket.org/robertmassaioli/hailgun
+
 category:            Network
 
 build-type:          Simple
@@ -89,3 +91,7 @@ library
 
    ghc-options:         -W
    default-language:    Haskell2010
+
+source-repository head
+  type:     git
+  location: https://bitbucket.org/robertmassaioli/hailgun.git
