--- a/hailgun.cabal
+++ b/hailgun.cabal
@@ -10,7 +10,7 @@ name:                hailgun
 -- PVP summary:      +-+------- breaking API changes
 --                   | | +----- non-breaking API additions
 --                   | | | +--- code changes with no API change
-version:             0.4.1.5
+version:             0.4.1.6
 
 -- A short (one-line) description of the package.
 synopsis:            Mailgun REST api interface for Haskell.
@@ -79,7 +79,7 @@ library
                         , http-client        >= 0.4 && < 0.6
                         , http-client-tls    >= 0.2 && < 0.4
                         , email-validate     >= 2.0 && < 2.4
-                        , http-types         >= 0.8 && < 0.10
+                        , http-types         >= 0.8
                         , exceptions         == 0.8.*
                         , tagsoup            >= 0.13 && < 0.15
                         , filepath           >= 1 && < 2
