Update copyright in cabal file.

--- a/hailgun.cabal
+++ b/hailgun.cabal
@@ -34,7 +34,7 @@ author:              Robert Massaioli
 maintainer:          robertmassaioli@gmail.com
 
 -- A copyright notice.
-copyright:           (c) 2014 Robert Massaioli
+copyright:           (c) 2014-2018 Robert Massaioli
 
 homepage:            https://bitbucket.org/robertmassaioli/hailgun
 
