--- a/hailgun.cabal
+++ b/hailgun.cabal
@@ -73,7 +73,7 @@ library
 
    build-depends:         base               >= 4.6 && < 5
                         , bytestring         >= 0.10.4 && <= 0.11
-                        , aeson              >= 0.8 && < 1.3
+                        , aeson              >= 0.8
                         , text               == 1.2.*
                         , transformers       >= 0.3 && < 0.6
                         , http-client        >= 0.4 && < 0.6
