--- a/hailgun.cabal
+++ b/hailgun.cabal
@@ -75,7 +75,7 @@ library
                         , aeson              >= 0.8
                         , bytestring         >= 0.10.4 && <= 0.11
                         , email-validate     >= 2.0 && < 2.4
-                        , exceptions         == 0.8.*
+                        , exceptions         >= 0.8
                         , filepath           >= 1 && < 2
                         , http-client        >= 0.4 && < 0.6
                         , http-client-tls    >= 0.2 && < 0.4
