--- a/hailgun.cabal
+++ b/hailgun.cabal
@@ -10,7 +10,7 @@ name:                hailgun
 -- PVP summary:      +-+------- breaking API changes
 --                   | | +----- non-breaking API additions
 --                   | | | +--- code changes with no API change
-version:             0.4.1.8
+version:             0.4.1.9
 
 -- A short (one-line) description of the package.
 synopsis:            Mailgun REST api interface for Haskell.
@@ -49,11 +49,6 @@ extra-source-files:  README.markdown
 -- Constraint on the version of Cabal needed to build this package.
 cabal-version:       >=1.10
 
-Flag NewTime
-   Description: Use version 1.5 of the time library or newer.
-   Default:     True
-
-
 
 library
    exposed-modules:       Mail.Hailgun
@@ -71,22 +66,19 @@ library
                         , Mail.Hailgun.PartUtil
                         , Mail.Hailgun.SendEmail
 
-   build-depends:         base               >= 4.6 && < 5
-                        , aeson              >= 0.8
-                        , bytestring         >= 0.10.4 && <= 0.11
-                        , exceptions         >= 0.8
-                        , filepath           >= 1 && < 2
-                        , http-client        >= 0.4 && < 0.7
-                        , http-client-tls    >= 0.2 && < 0.4
-                        , http-types         >= 0.8
-                        , tagsoup            >= 0.13 && < 0.15
-                        , text               == 1.2.*
-                        , transformers       >= 0.3 && < 0.6
-
-   if flag(newtime)
-      Build-Depends:    time >= 1.5
-   else
-      Build-Depends:    time >= 1.2 && < 1.5, old-locale == 1.*
+   build-depends:         base
+                        , aeson
+                        , bytestring
+                        , exceptions
+                        , filepath
+                        , http-client
+                        , http-client-tls
+                        , http-types
+                        , tagsoup
+                        , text
+                        , transformers
+                        , time
+                        , time-compat
 
    ghc-options:         -W
    default-language:    Haskell2010
