--- a/hailgun.cabal
+++ b/hailgun.cabal
@@ -80,7 +80,7 @@ library
                         , http-client-tls    >= 0.2 && < 0.4
                         , http-types         >= 0.8
                         , tagsoup            >= 0.13 && < 0.15
-                        , text               == 1.2.*
+                        , text               >= 2.0
                         , transformers       >= 0.3 && < 0.6
 
    if flag(newtime)
